sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value j
	if (plusPetit(v,i-j)) {
                          ^AlgInsertionSort:9: error: not found: value j
	copie(i-j,i-j+1) }
                ^AlgInsertionSort:10: error: not found: value j
	j=j-1
        ^AlgInsertionSort:11: error: not found: value j
	setValeur(j,v) ;
                  ^AlgInsertionSort:12: error: not found: value j
} while( j>0 && getValeur(j-1)<v)  }
         ^