sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var n:Int=getNombreValeurs()
var v:Int=0
for (i<-1 to n-1 by 1) {
	v=getValeur(i)
do  {	
	if (plusPetit(v,i-j)) {
	copie(i-j,i-j+1) }
	j=j-1
	setValeur(j,v) ;
} while( j>0 && getValeur(j-1)<v)  }
}
